# Gallerust

./: Cargo.toml  Gallerust.desktop  LICENSE  readme.md
.github/workflows/: release.yml
src/: main.rs
