[package]
name = "gallerust"
version = "1.0.0"
edition = "2024"
description = "A simple image viewer made in Rust."
license = "MIT"
homepage = "https://github.com/DrewBornt/Gallerust.git"
repository = "https://github.com/DrewBornt/Gallerust.git"

[package.metadata.deb]
maintainer = "Andrew Bornt andrew.bornt@gmail.com"
copyright = "2026, Andrew Bornt"
license-file = ["LICENSE", "4"]
extended-description = "Gallerust is a minimal image viewer built in Rust."
depends = "$auto"
section = "graphics"
priority = "optional"
assets = [
    ["target/release/gallerust", "usr/bin", "755"],
    ["gallerust.desktop", "usr/share/applications/gallerust.desktop", "644"]
]

[package.metadata.rpm]
package = "gallerust"
[package.metadata.rpm.cargo]
buildflags = ["--release"]
[package.metadata.rpm.targets]
gallerust = {path = "/usr/bin/gallerust"}
[package.metadata.rpm.files]
"/usr/share/applications/gallerust.desktop" = { source = "assets/gallerust.desktop" }

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp"] }
rfd = "0.14"

[[bin]]
name = "gallerust"
path = "src/main.rs"